fix: bleeding color images

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -88,5 +88,5 @@
 
     // IMAGES
 
-    --main-hero: url(https://cat-milk.github.io/Anime-Girls-Holding-Programming-Books/static/3fd2e059888bb6cf984f2fb61cc303db/47126/Sakurajima_Mai_Holding_C_Programming_Language.png);
+    --main-hero: url(../../images/hero.jpg);
 }
