--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -10,29 +10,61 @@ section {
 
 .hero {
 
+    
     &__content {
 
+        background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
+        url(../../../assets/images/hero.jpg);
+        background-position: center;
+        background-size: cover;
+        border-radius: var(--round-md);
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
         flex-wrap: wrap;
         gap: var(--spacing-md);
         height: 80dvh;
+        
+        background-clip: padding-box;
 
-        & > :is(&--left, &--right) {
+        position: relative;
 
-            
-            border: red 1px solid;
+        /* &::before {
+
+            content: "";
+            position: absolute;
+            inset: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba(0, 0, 0, .65);
+            z-index: 0;
+            backdrop-filter: blur(.225rem);
+            border-radius: inherit(hidden);
+            background-clip: padding-box;
+        } */
+
+        & > * {
+
+            z-index: 1;
         }
 
-        &--left {
+        & > .hero__header {
 
-            flex: 1;
-            font-size: 2.6rem;
-        }
+            width: 60%;
 
-        &--right {
+            & > h1 {
 
-            width: 55%;
+                display: block;
+                width: fit-content;
+                margin: 0 auto;
+                font-size: 4.2rem;
+            }
+
+            & > p {
+
+                font-size: 2.1rem;
+            }
         }
     }
 
